<resources>
    <string name="app_name">Connect four</string>
    <string name="play">Play</string>
    <string name="connect_four">Connect Four</string>
    <string name="hover_over_me">Hover Over Me</string>
    <string name="i_disappear_on_hover">I disappear on hover!</string>
    <string name="gridsize">GridSize</string>
    <string name="play1">Play</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="upload">Upload</string>
    <string name="start">Start</string>
    <string name="grid_size">Grid Size</string>
    <string name="select_theme">Select Theme</string>
    <string name="select_game_mode">Select Game Mode</string>
    <string name="create_game">Create Game</string>


</resources>