<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/background_2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gridsize"
        android:fontFamily="@font/ghost"
        android:textColor="@color/white"
        android:textSize="40sp"/>

    <Spinner
        android:id="@+id/spinnerGridSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/buttonPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play1"
        android:layout_gravity="center_horizontal"
        android:onClick="onPlayClicked"/>

    <!-- EditText for Name -->
    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_name"/>

    <Spinner
        android:id="@+id/spinnerColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <!-- Button for Image Upload -->
    <Button
        android:id="@+id/buttonUploadImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload"
        android:onClick="onUploadImage"/>

    <!-- ImageView to display the uploaded image -->
    <ImageView
        android:id="@+id/imageViewPlayer"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@android:drawable/ic_menu_camera"/>

    <!-- Button to Start Game -->
    <Button
        android:id="@+id/buttonStartGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:onClick="onStartGame"/>




</LinearLayout>


