<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center">

    <!-- Spinner for selecting grid sizes -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grid_size"
        android:layout_marginBottom="8dp"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <Spinner
        android:id="@+id/spinnerGridSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <!-- Spinner for selecting grid names/themes -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_theme"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <Spinner
        android:id="@+id/spinnerGridName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <!-- Spinner for selecting game mode -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_game_mode"
        android:layout_marginBottom="8dp"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <Spinner
        android:id="@+id/spinnerGameMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/buttonCreateGameSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_game"
        android:layout_marginTop="16dp"
        android:onClick="createGameSettings"/>


</LinearLayout>
